ros2_ws/log/build_2025-02-18_03-29-12/turtlebot_controller/stderr.log
  File "/home/ganathipan/ros2_ws/install/turtlebot_controller/lib/python3.8/site-packages/turtlebot_controller/controller.py", line 82
    def main(args=Noneld --packages-select turtlebot_controller
                                           ^
SyntaxError: invalid syntax

